# modio-workshop-wrapper

./: .gitignore  CMakeLists.txt
include/: MWWrapper.h
include/schemas/: mod.h
lib/win32/: modio.lib
lib/win64/: modio.lib
src/: MWWrapper.cpp
src/schemas/: mod.cpp
